--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@next-auth/prisma-adapter": "^1.0.5",
 		"@prisma/client": "^4.12.0",
 		"@steeze-ui/heroicons": "^2.2.2",
-		"@steeze-ui/svelte-icon": "^1.3.2"
+		"@steeze-ui/svelte-icon": "^1.3.2",
+		"zod": "^3.21.4"
 	}
 }
