--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@prisma/client": "^4.12.0",
 		"@steeze-ui/heroicons": "^2.2.2",
 		"@steeze-ui/svelte-icon": "^1.3.2",
+		"@sveltejs/adapter-vercel": "^2.4.1",
 		"zod": "^3.21.4"
 	}
 }
