--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.58.0",
 		"svelte-check": "^3.2.0",
+		"svelte-dnd-action": "^0.9.22",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.5",
 		"tslib": "^2.5.0",
