--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^1.15.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/crypto-js": "^4.1.1",
 		"@types/node": "^18.15.11",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
 		"@typescript-eslint/parser": "^5.57.1",
@@ -47,6 +48,8 @@
 		"@steeze-ui/svelte-icon": "^1.3.2",
 		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/adapter-vercel": "^2.4.1",
+		"crypto-js": "^4.1.1",
+		"nodemailer": "^6.9.1",
 		"prisma": "^4.12.0",
 		"zod": "^3.21.4"
 	}
