--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "kanban",
+	"description": "Kanban board app",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -13,7 +14,6 @@
 		"prepare": "pnpm prisma generate"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.15.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
@@ -47,7 +47,6 @@
 		"@steeze-ui/heroicons": "^2.2.2",
 		"@steeze-ui/svelte-icon": "^1.3.2",
 		"@sveltejs/adapter-node": "^1.2.3",
-		"@sveltejs/adapter-vercel": "^2.4.1",
 		"crypto-js": "^4.1.1",
 		"nodemailer": "^6.9.1",
 		"prisma": "^4.12.0",
