--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:password@localhost:5432/dbname"
+DATABASE_URL="postgres://postgres:postgres@localhost:5432/postgres"
 
 GITHUB_ID=
 GITHUB_SECRET=
