--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,11 +3,13 @@ services:
   app:
     build: .
     ports:
-      - "3000:3000"
+      - "5173:5173"
     env_file:
       - .env
     environment:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
+      - PORT=5173
+      - ORIGIN=http://localhost:5173
   db:
     image: postgres
     ports:
